--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ url: "https://memoimich.github.io" # the base hostname & protocol for your site,
 
 #-------------------------------
 # About Section
-author-name:   Xu, Hong
-author-avatar: 09.jpg
+author-name:   HongX
+author-avatar: Author.JPG
 
 
 #-------------------------------
