--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # General Site Settings
 
-title: Photography
+title: HongX - Photography
 description: This is me. # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://memoimich.github.io" # the base hostname & protocol for your site, e.g. http://example.com
