--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: HongX - Photography
 description: This is me. # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://memoimich.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://xgraphy.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 
 #-------------------------------
