--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ pinterest: https://www.pinterest.com/ # Add your Facebook handle
 
 #-------------------------------
 # Comment Section (Disqus)
-disqus-identifier: HongX # Add your shortname for Disqus Comment. For example mr-brown
+disqus-identifier: Helios # Add your shortname for Disqus Comment. For example mr-brown
 
 
 #-------------------------------
